--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<tr>
 				<td><img src="img/download.jpg" alt="Profile picture Jarno Korteschiel"></td>
 				<td>
-					<h1>Jarno Korteschiel</h1>
+					<h1>Jarno Thomas Korteschiel</h1>
 					<p><em>Founder and Head Web Developer of <strong><a href="https://www.jtkmedia.nl">JTK Media</a></strong></em></p>
 					<p>I am a HTML, CSS and JavaScript developer within my own company.</p>
 				</td>
